Minimal code changes

--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
 
     <header>
       <img src="https://avatars2.githubusercontent.com/u/42484745?s=400&u=94f73a0dac0d93e9dea01f1a85fcbb1e57f4d60d&v=4" alt="Photo of Rahul" class="profile-image">
-      <h1 class="tag name">Hello, I’m Rahul.</h1>
+      <h1 class="tag name">Hello, I’m Rahul Chaudhary.</h1>
       <p class="tag location">Python Developer | Blogger | Tech Enthusiast</p>
     </header>
   
